Apply Stefan Birkner'S common library design.

--- a/releases.html
+++ b/releases.html
@@ -1,32 +1,8 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <meta charset='utf-8'>
-
-  <title>No Primitives – Releases</title>
-  <link rel="stylesheet" href="bootstrap.min.css" />
-  <link rel="stylesheet" href="bootstrap-responsive.min.css" />
-</head>
-
-<body>
-  <div class="navbar">
-    <div class="navbar-inner">
-      <div class="container">
-        <a class="brand" href="index.html">No Primitives</a>
-        <ul class="nav">
-          <li><a href="index.html">Overview</a></li>
-          <li><a href="license.html">License</a></li>
-          <li class="active"><a href="#">Releases</a></li>
-        </ul>
-      </div>
-    </div>
-  </div>
-
-  <div class="container-fluid">
-    <div class="page-header">
-      <h1>Releases</h1>
-    </div>
-
+---
+layout: page
+title: Semantic Wrapper – Releases
+headline: Releases
+---
 		<section>
 			<dl>
 				<dt>1.0.0</dt>
@@ -35,18 +11,3 @@
 				</dd>
 			</dl>
 		</section>
-  </div>
-
-  <script type="text/javascript">
-    var _gaq = _gaq || [];
-    _gaq.push(['_setAccount', 'UA-24640829-5']);
-    _gaq.push(['_trackPageview']);
-
-    (function() {
-      var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-      ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-      var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-    })();
-  </script>
-</body>
-</html>
