--- a/index.html
+++ b/index.html
@@ -1,40 +1,8 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <meta charset='utf-8'>
-
-  <title>No Primitives</title>
-  <link rel="stylesheet" href="bootstrap.min.css" />
-	<style>
-		#overview h2 {font-weight:200;}
-		.span4 {margin-bottom:2em;}
-	</style>
-</head>
-
-<body>
-  <div class="navbar">
-    <div class="navbar-inner">
-      <div class="container">
-        <a class="brand" href="#">No Primitives</a>
-        <ul class="nav">
-          <li class="active"><a href="#">Overview</a></li>
-          <li><a href="license.html">License</a></li>
-          <li><a href="releases.html">Releases</a></li>
-        </ul>
-      </div>
-    </div>
-  </div>
-
-  <div class="container-fluid">
-		<header>
-		  <div class="hero-unit">
-		    <h1>No Primitives</h1>
-		    <p>An <code>int</code> is nothing more than an <code>int</code>, but an <code>OrderNumber</code> is an <code>OrderNumber</code>.</p>
-		    <p>Use your own classes to provide semantics for the reader of your API
-				or code. No Primitives generates them for you.</p>
-		  </div>
-		</header>
-
+---
+layout: index
+title: Semantic Wrapper
+description: Use your own classes to provide semantics for the reader of your API or code. No Primitives generates them for you.
+---
 		<section>
 			<div class="page-header">
 				<h1>How to use it</h1>
@@ -77,19 +45,3 @@ Name name = name(null); //name == null</pre>
 				</div>
 		    <p>Stefan Birkner (mail@stefan-birkner.de)</p>
 			</section>
-  </div>
-
-  <script src="bootstrap.min.js"></script>
-  <script type="text/javascript">
-    var _gaq = _gaq || [];
-    _gaq.push(['_setAccount', 'UA-24640829-5']);
-    _gaq.push(['_trackPageview']);
-
-    (function() {
-      var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-      ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-      var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-    })();
-  </script>
-</body>
-</html>
