Add location for semantic-wrapper file.

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ description: Use your own classes to provide semantics for the reader of your AP
 			<section>
 				<ol>
 					<li>
-						Generate a configuration file and tell No Primitives about your classes and their base types.
+						Generate a configuration file <code>src/main/semantic-wrapper/any-name</code>and tell No Primitives about your classes and their base types.
 						<pre>com.github.stefanbirkner.noprimitives.example.OrderNumber : int
 com.github.stefanbirkner.noprimitives.example.Name : String</pre>
 					</li>
